Update entire codebase: add Tailwind config, update components and services, remove documentation files

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,6 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
   "framework": "vite",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "rewrites": [{"source": "/(.*)", "destination": "/index.html"}]
 }
-
